React Route Dom

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VODU TV</title>
   </head>
-  <body>
+  <body class="h-screen overflow-auto bg-slate-900 text-white ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
